Django/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-sql
  labels:
    app: django
spec:
  ports:
    - port: 5432
  selector:
    app: django
    tier: postgres
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: postgres-sql
  labels:
    app: django
spec:
  selector:
    matchLabels:
      app: django
      tier: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        tier: postgres
    spec:
      containers:
      - image: postgres:latest
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
