Django/reactapp-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-react-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
     # targetPort: 3000
     # protocol: TCP
     # nodePort: 31000
  selector:
    app: my-react-app

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
        - name: my-react-app
          image: jeetbisht91/reactapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      restartPolicy: Always
